# ed25519-consensus

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: main.yml
benches/: bench.rs
src/: batch.rs  constants.rs  error.rs  lib.rs  public_key.rs  secret_key.rs  signature.rs  signing_key.rs  verification_key.rs
src/batch/: batcher.rs  singleton.rs
tests/: batch.rs  rfc8032.rs  small_order.rs  unit_tests.rs
tests/util/: mod.rs
