[package]
name = "ed25519-zebra"
# Before publishing:
# - update CHANGELOG.md
# - update html_root_url
version = "2.2.0"
authors = ["Henry de Valence <hdevalence@hdevalence.ca>"]
license = "MIT OR Apache-2.0"
edition = "2018"
repository = "https://github.com/ZcashFoundation/ed25519-zebra"
description = "Zcash-flavored Ed25519 for use in Zebra."

[package.metadata.docs.rs]
features = ["nightly"]

[dependencies]
hex = "0.4"
sha2 = "0.9"
rand_core = "0.5"
thiserror = "1"
curve25519-dalek = "3"
serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
rand = "0.7"
bincode = "1"
criterion = "0.3"
ed25519-zebra-legacy = { package = "ed25519-zebra", version = "1" }
color-eyre = "0.5"
once_cell = "1.4"

[features]
nightly = []
default = ["serde"]

[[test]]
name = "rfc8032"

[[test]]
name = "unit_tests"

[[test]]
name = "batch"

[[bench]]
name = "bench"
harness = false
